Updated Image and User Fields
